[package]
name = "crescent-alarmgrid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-slack-web-api = { git = "https://github.com/Pctg-x8/async-slack-web-api", version = "0.1.0", features = ["rustls"] }
aws_lambda_events = "0.7.3"
lambda_runtime = "0.7.3"
rand = "0.8.5"
reqwest = { version = "0.11.14", features = ["json", "rustls", "rustls-tls"], default-features = false }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
tokio = { version = "1.25.0", features = ["macros"] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = { version = "0.3.16", features = ["fmt"] }
